unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/breadwinner_ns__BW_Contact__c.object-meta.xml
<CustomObject>
    <label>NetSuite Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>