unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/fields/breadwinner_ns__AltEmail__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__AltEmail__c</fullName>
    <label>Alt. Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>