unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/fields/breadwinner_ns__Company__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>NetSuite Contacts</relationshipLabel>
    <relationshipName>BWContacts</relationshipName>
    <type>Lookup</type>
</CustomField>