unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/fields/breadwinner_ns__CompanyInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CompanyInternalId__c</fullName>
    <label>Company Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>