unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/fields/breadwinner_ns__IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>