unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/fields/breadwinner_ns__NS_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NS_BillingCountry__c</fullName>
    <label>NetSuite API Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>