unpackaged/main/default/objects/breadwinner_ns__BW_Contact__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__Company__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__Salesforce_Contact__c</columns>
    <columns>breadwinner_ns__Title__c</columns>
    <columns>breadwinner_ns__Phone__c</columns>
    <columns>breadwinner_ns__Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>